# eyna

./: .gitignore  .ncurc.json  .npmrc  LICENSE  README.md  b.mjs  dprint.json  p.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.codeql/: .gitignore  README.md
.github/: dependabot.yml
config/: key.json  key.schema  sys.json  sys.schema
extension/: tsconfig.json
pkg/native/: .gitignore  CMakeLists.txt  binding.gyp  package.json
pkg/native/esm/: index.d.ts  index.mjs
pkg/native/lib/: _require.ts  _type.ts  browser.ts  index.cjs  index.mjs
pkg/native/scripts/: _cmake.mts  _cmake.ts  _vcvarsall.mts  _vcvarsall.ts  build.mjs  build.ts  build_node.mjs  build_node.ts  build_node2.ts  cmake.ts  cmake_node.mts  cmake_node.ts  install.mjs
pkg/native/src/: common.hpp  common_attribute.hpp  common_entry.hpp  common_icon.hpp  common_iterator.hpp  compare.hpp  copy.hpp  create_directory.hpp  create_file.hpp  create_symlink.hpp  exists.hpp  get_archive.hpp  get_archive_entry.hpp  get_attribute.hpp  get_directory.hpp  get_entry.hpp  get_icon.hpp  get_icon_type.hpp  get_path_attribute.hpp  get_volume.hpp  is_elevated.hpp  main.cpp  move.hpp  move_to_trash.hpp  open_properties.hpp  resolve.hpp  set_exte.hpp  watch.hpp
pkg/native/test/: _util.cts  _util.ts  export.cjs  export.mjs  icon.mjs  test.cjs  test.mjs  test.ts  test_arc.cts  test_arc.mts  test_arc_rar.cts  test_arc_rar.mts  test_arc_rar_pw1.cts  test_arc_rar_pw1.mts  test_arc_rar_pw2.cts  test_arc_tar.cts  test_arc_tar.mts  test_arc_tar.ts  test_arc_tarzst.cts  test_arc_tarzst.mts  test_arc_tgz.cts  test_arc_tgz.mts  test_arc_tgz.ts  test_arc_zip.cts  test_arc_zip.mts  test_arc_zip.ts  test_compare.cts  test_compare.mts  test_compare.ts  test_depth.cts  test_depth.mts  test_get.cts  test_get.mts  test_get.ts  test_icon.cts  test_icon.mts  test_icon.ts  test_link.cts  test_link.mts  test_link.ts  (+11 more)
pkg/native/test/fixtures/: main.go  test.rar  test.tar  test.tar.zst  test.tgz  test_pw1.rar  test_pw2.rar
pkg/native/ts/: _func.ts  _function.ts  _type.d.ts  _type.ts  browser.ts
pkg/native/types/: _func.d.ts  _type.d.ts  index.d.ts
scripts/: _app.mjs  _app.mts  _app.ts  _electron.mts  _extension.mjs  _extension.mts  _extension.ts  _headers.mts  _headers.ts  _native.mjs  _native.mts  _native.ts  _package.mjs  _package.mts  _package.ts  _pug.mjs  _pug.mts  _pug.ts  _stylus.mjs  _stylus.mts  _stylus.ts  b.mjs  (+21 more)
(+212 files in other folders)
